
ChangeLog
 [ + added, - removed, * changed ]
 * 18Oct2012 Fixes for DynInst launch
             CUDA applications instrumented with DynInst now instruments
						 routines that call cudaLaunch.
 * 17Oct2012 Added Intel OpenMP runtime instrumentation when using Dyninst.
   Also, some minor enhacenements done when using DynInst.
 * 16Oct2012 Do not use -lrt if the system automatically adds clock_gettime
 * 11Oct2012 Improved support for Intel MIC KNC/KNF, now with support for
   Intel MPI 
 * 10Oct2012 Changed --enable-cuda for --with-cuda=DIR in the configure script
 + 09Oct2012 Improved support for BG/Q systems. Improved example for this
   architecture using libxml2 and binutils.
 + 04Oct2012 Added void Extrae_define_event_type (extrae_type_t type, char
 *type_description, unsigned nvalues, extrae_value_t *values, char
 **values_description); into the API
 + 04Oct2012 Added void Extrae_register_function_address (void *ptr, char
 *funcname, char *modname, unsigned line); into the API
 + 04Oct2012 Added additional checks for Extrae_register_function_address call
 + 01Oct2012 Added two additional checks tests/functional/dump-events and
   tests/functional/auto-init-fini. The former checks the basic API to emit
   events whereas the second checks for the instrumentation auto
   initialization and finalization.
 * 01Oct2012 Extrae API calls now honor extre_type_t / extrae_value_t instead
   of basic types (unsigned/unsigned long).
 * 28Sep2012 Turned 
   void Extrae_register_codelocation_type (extrae_type_t t, char* s1, char
	 *s2) 
	 into
	 void Extrae_register_codelocation_type (extrae_type_t t1, extrae_type_t t2,
	 char* s1, char *s2)
 + 28Sep2012 Added make check capability into Extrae. Currently there is only
    one check
 + 21Sep2012 Added instrumentation call
    void Extrae_register_codelocation_type (extrae_type_t t, char* s1, char *s2)
 + 14Aug2012 Added -remove-files to the mpi2prv (and to the xml) so as to