@@ -1461,6 +1461,9 @@ AC_DEFUN([AX_PROG_DYNINST],
    dnl Check for patchAPI within DynInst (is Dyninst > 7.0.1?)
    AM_CONDITIONAL(DYNINST_HAVE_PATCHAPI, test -f ${DYNINST_LIBSDIR}/libpatchAPI.so)
 
+   dnl Check for pcontrol within DynInst (is Dyninst > 7.0.1?)
+   AM_CONDITIONAL(DYNINST_HAVE_PCONTROL, test -f ${DYNINST_LIBSDIR}/libcontrol.so)
+
    dnl Did the checks pass?
    AM_CONDITIONAL(HAVE_DYNINST, test "${DYNINST_INSTALLED}" = "yes")
 
