@@ -4,8 +4,14 @@ bin_PROGRAMS = extrae
 
 noinst_PROGRAMS = load-module
 
+# After 7.0.1 there were several steps to fragment dyninst
+# Step #1, add patch api
 if DYNINST_HAVE_PATCHAPI
-DYNINST_EXTRA_LIBS = -lpatchAPI
+DYNINST_EXTRA_LIBS = -lpatchAPI -lpcontrol -lstackwalk -lcommon -ldynDwarf -ldynElf -lsymLite 
+endif
+# Step #2, add pcontrol, stackwalk, dynDwarf/Elf and symLite
+if DYNINST_HAVE_PCONTROL
+DYNINST_EXTRA_LIBS = -lpcontrol -lstackwalk -lcommon -ldynDwarf -ldynElf -lsymLite 
 endif
 
 extrae_SOURCES = extrae.C \
@@ -18,8 +24,8 @@ extrae_SOURCES = extrae.C \
  mini-xml-parse.c mini-xml-parse.h
 extrae_CXXFLAGS = -I$(COMMON_DIR) -I@DYNINST_INCLUDES@
 extrae_CFLAGS = -I$(COMMON_DIR) -I@DYNINST_INCLUDES@ @XML2_CFLAGS@
-extrae_LDFLAGS =  @DYNINST_LDFLAGS@ -ldyninstAPI @UNWIND_LDFLAGS@ @UNWIND_LIBS@ -lparseAPI -lsymtabAPI -linstructionAPI $(DYNINST_EXTRA_LIBS) -lcommon @LIBERTY_LDFLAGS@ @LIBERTY_LIBS@ @XML2_LDFLAGS@ @XML2_LIBS@ @DWARF_LDFLAGS@ -ldwarf @ELF_LDFLAGS@ -lelf
+extrae_LDFLAGS =  @DYNINST_LDFLAGS@ -ldyninstAPI @UNWIND_LDFLAGS@ @UNWIND_LIBS@ -lparseAPI -lsymtabAPI -linstructionAPI $(DYNINST_EXTRA_LIBS) -lcommon @DWARF_LDFLAGS@ -ldwarf @ELF_LDFLAGS@ -lelf @XML2_LDFLAGS@ @XML2_LIBS@
 
 load_module_SOURCES = load-module.C
 load_module_CXXFLAGS = -I$(COMMON_DIR) -I@DYNINST_INCLUDES@
-load_module_LDFLAGS = @DYNINST_LDFLAGS@ -ldyninstAPI @UNWIND_LDFLAGS@ @UNWIND_LIBS@ -lparseAPI -lsymtabAPI -linstructionAPI $(DYNINST_EXTRA_LIBS) -lcommon @LIBERTY_LDFLAGS@ @LIBERTY_LIBS@ @DWARF_LDFLAGS@ -ldwarf @ELF_LDFLAGS@ -lelf
+load_module_LDFLAGS = @DYNINST_LDFLAGS@ -ldyninstAPI @UNWIND_LDFLAGS@ @UNWIND_LIBS@ -lparseAPI -lsymtabAPI -linstructionAPI $(DYNINST_EXTRA_LIBS) -lcommon @DWARF_LDFLAGS@ -ldwarf @ELF_LDFLAGS@ -lelf @XML2_LDFLAGS@ @XML2_LIBS@
