@@ -1,6 +1,8 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ * 22Oct2012 DynInst compilation changed and broke into different components.
+   Now sports pcontrol, stackwalk, dynelf/dwarf and symlite. 
  * 18Oct2012 Fixes for DynInst launch
              CUDA applications instrumented with DynInst now instruments
 						 routines that call cudaLaunch.
